# badges

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: error.rs  font.rs  lib.rs  main.rs  template.rs
tests/: render.rs
