[package]
name = "badges"
version = "0.3.0"
edition = "2021"
authors = ["Sophie Tauchert <sophie@999eagle.moe>"]
license = "MIT OR Apache-2.0"
description = "A pure Rust library for generating SVG badges with an included binary"
keywords = ["svg", "badge"]
categories = ["visualization", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["font-shape"]
cli = ["clap"]
font-shape = ["once_cell", "rustybuzz"]

[[bin]]
name = "badges"
required-features = ["cli"]

[dependencies]
# always required dependencies
thiserror = "^1"
askama = "^0.11"

# dependencies for font measurement
once_cell = { version = "^1.16", optional = true }
rustybuzz = { version = "^0.6", optional = true }

# dependencies for cli
clap = { version = "^4", optional = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "^1.3"
